--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@studio-freight/lenis": "^1.0.42",
 		"@tanstack/react-query": "^5.48.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.5.0",
+		"gsap": "^3.12.7",
 		"lucide-react": "^0.396.0",
 		"next": "14.2.4",
 		"next-themes": "^0.3.0",
 		"prisma": "^5.22.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"stripe": "^16.0.0",
+		"stripe": "^16.12.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
